cmake_minimum_required(VERSION 2.8.3)
project(linkedlists C CXX)
add_definitions(-g -DDEBUG)
add_executable(singlell singlell.h singlell.cc)
add_executable(findLoop singlell.h loopinLL.cc)
add_executable(Palindrome singlell.h palindrome.cc)
add_executable(insertll   insertll.cc)
add_executable(nthNode nThNode.cc)
add_executable(reverse reverse.cc)
add_executable(mergell mergeLists.cc)
add_executable(splitAlt splitAlternate.cc)
add_executable(reverseAlt reverseAltNodes.cc)
add_executable(memtest  memtest.cc)