cmake_minimum_required(VERSION 2.8.3)
project(linkedlists C CXX)
add_definitions(-g -DDEBUG)
find_package ( Threads )
add_executable(threads threadStart.c)
#add_executable(counter counter.c)
target_link_libraries(threads ${CMAKE_THREAD_LIBS_INIT})
#target_link_libraries(counter ${CMAKE_THREAD_LIBS_INIT})
add_executable(bbuf boundedbuffer.c)
target_link_libraries(bbuf ${CMAKE_THREAD_LIBS_INIT})
add_executable(prodcons prodcons.c)
target_link_libraries(prodcons ${CMAKE_THREAD_LIBS_INIT})
